# biot_solver

./: LICENCE  manufactured_soln2.py  setup.cfg
scripts/: dirichlet_condition_number.py  dirichlet_manufactured_soln.py  mixed_poisson.py  mixedbcs_manufactured_soln.py
src/biot_system/: __init__.py  benchmarks.py  biot_system.py  utils.py
src/biot_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
