

[metadata]
name = biot_system
version = 0.1.0
license= GNU General Public License v3

description= A FEniCS solver for Biot's equation
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
classifiers=
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   scipy
   matplotlib
   numba
   tqdm
   pandas
   pygmsh
   meshio
   h5py

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[flake8]
ignore = E501, E126, E226, W503, E131, E221, E265
